grammar.js
    source_file: $ => seq(
      optional($.string),
      repeat($.statement),
    ),

    use_statement: $ => seq(
      'use',
      optional(seq($.identifier, '=')),
      choice(
        $.string,
        $.ffi_method,
      ),
      optional($.platform_specifier),
    ),
    ffi_method: $ => seq(
      '@',
      choice($.identifier, $.string),
      field('returns', seq('[', $.type, ']')),
      $.parameters,
      optional('?'),
    ),
    platform_specifier: $ => $.if_block,

    capability: _ => choice('iso', 'trn', 'ref', 'val', 'box', 'tag'),

    parameters: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => choice(
      seq(
        field('name', $.identifier),
        ':',
        $.type,
        optional(seq('=', $.expression))),
      '...',
    ),

    base_type: $ => prec.right(seq(
      field('name', sep1('.', $.identifier)),
      optional($.type_args),
    )),

    type_args: $ => seq('[', commaSep1($.type), ']'),

    iso_type: $ => seq(choice($.base_type, $.lambda_type), 'iso'),
    ref_type: $ => seq(choice($.base_type, $.lambda_type), 'ref'),
    tag_type: $ => seq(choice($.base_type, $.lambda_type), 'tag'),
    aliased_type: $ => seq($.type, '!'),
    ephemeral_type: $ => seq($.type, '^'),

    tuple_type: $ => seq('(', commaSep1($.type), ')'),

    union_type: $ => prec.right(seq(
      choice(
        seq('(', $.type, repeat1(prec.right(seq('|', $.type))), ')'),
        seq($.type, repeat1(prec.right(seq('|', $.type)))),
      ),
    )),

    intersection_type: $ => prec.right(seq(
      choice(
        seq('(', $.type, repeat1(prec.right(seq('&', $.type))), ')'),
        seq($.type, repeat1(prec.right(seq('&', $.type)))),
      ),
    )),

    viewpoint_type: $ => prec.right(seq($.type, '->', $.type)),

    block: $ => prec.left(seq($.expression, repeat(seq(optional(';'), $.expression)))),

    if_block: $ => seq(
      choice('if', 'ifdef'),
      optional($.annotation),
      $.block,
    ),

    consume_expression: $ => seq('consume', optional($.capability), $.identifier),

    string: $ => choice($._string_literal, $._multiline_string_literal),

    _string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $._escape_sequence,
      )),
      '"',
    ),
    _multiline_string_literal: $ => prec.right(seq(
      '"""',
      repeat(choice(
        alias($._multiline_string_content, $.string_content),
        $._escape_sequence,
      )),
      '"""',
    )),

    string_content: _ => token.immediate(prec(1, /[^"\\]+/)),
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_']*/,
    this: _ => 'this',
